--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
 
 p {
 	font-size: 1.6rem;
+  
 }
 
 h1 {
@@ -42,7 +43,7 @@ h1 {
 
 .app .search {
 	text-align: center;
-	padding: 1rem;
+	padding-top: 5rem;
 }
 
 .app input {
@@ -50,19 +51,24 @@ h1 {
 	font-size: 1.2rem;
 	border-radius: 25px;
 	border: 1px solid rgba(255, 255, 255, 0.8);
-	background: rgba(255, 255, 255, 0.1);
-	color: #f8f8f8;
+	background: rgba(255, 255, 255, 0.2);
+	color: #f8f8f8d9;
+}
+
+.app input:focus {
+	transform: scale(1.2);
+	transition: ease-in-out 500ms;
 }
 
 ::placeholder {
-	color: #f8f8f89d;
+	color: #f8f8f8ec;
 }
 
 .container {
 	max-width: 700px;
-	height: 700px;
+	height: 70vh;
 	margin: auto;
-	padding: 0 1rem;
+	padding: 0 2rem;
 	position: relative;
 	top: 10%;
 	display: flex;
@@ -94,4 +100,20 @@ h1 {
 
 .bold {
 	font-weight: 600;
+}
+
+@media screen and (max-width: 740px) {
+	h1 {
+		font-size: 4rem;
+	}
+	p {
+		font-size: 1.2rem;
+	}
+	.app input:focus {
+		transform: scale(1.1);
+	}
+	.app .top {
+		margin: 0;
+	}
+	
 }
